--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "backend",
   "scripts": {
+    "build": "nest build",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "format": "prettier --write \"src/**/*.ts\"",
     "prisma": "npx prisma generate",
     "migrate:gen": "prisma migrate dev --name",
+    "seed": "prisma db seed"
+  },
+  "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.15.0",
     "@google-cloud/aiplatform": "^3.29.0",
     "@google-cloud/vertexai": "^1.7.0",
     "@google/generative-ai": "^0.19.0",
     "@nestjs/common": "^10.4.3",
     "@nestjs/core": "^10.4.3",
+    "@nestjs/elasticsearch": "^10.0.1",
     "@nestjs/platform-express": "^10.4.3",
     "@prisma/client": "^5.19.1",
     "bcrypt": "^5.1.1",
@@ -22,6 +29,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
+    "google-auth-library": "^9.14.1",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "uuid": "^10.0.0"
