--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": false,
+    "sourceMap": true,
     "strict": true,
     "skipLibCheck": true,
     "types": [
