--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "prisma": "npx prisma generate",
     "migrate:gen": "prisma migrate dev --name",
+    "migrate:reset": "prisma migrate reset --force",
     "seed": "prisma db seed"
   },
   "prisma": {
